# windowing

./: .gitignore  CMakeLists.txt  run.bat
windowing/: .gitignore  CMakeLists.txt
windowing/include/windowing/: windowing.h
windowing/include/windowing/internal/: module.h
windowing/source/: windowing.c
windowing_test/: CMakeLists.txt
windowing_test/source/: main.cpp
